[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pybioportal"
version = "1.0.1"
description = "A Python package to easily retrieve data from cBioPortal"
readme = "README.md"
authors = [
    {name = "Matteo Valerio", email = "mv.datascientist@outlook.com"},
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "numpy>=1.22.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
keywords = ["cBioPortal","bioinformatics","data science", "cancer"]

[tool.setuptools]
packages = ["pybioportal"]

[project.urls]
homepage = "https://github.com/Matteo-Valerio/pyBioPortal"
documentation = "https://pybioportal.readthedocs.io"
repository = "https://github.com/Matteo-Valerio/pyBioPortal"